modules/gdscript/tests/scripts/parser/errors/annotation_extra_comma.gd
@export_enum("A",, "B", "C") var a

func test():
	pass
